<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sourcecode.smarthospital.MainActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:padding="6dp"
        app:cardBackgroundColor="@color/cardview_shadow_end_color"
        app:cardCornerRadius="6dp"
        app:cardElevation="6dp"
        app:cardUseCompatPadding="true">


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/linear2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/linear1">

                <TextView
                    android:id="@+id/textName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="4dp"
                    android:padding="3dp"
                    android:text="@string/name"
                    app:layout_constraintHorizontal_bias="0.162"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear2"
                    app:layout_constraintVertical_bias="0.202" />

                <EditText
                    android:id="@+id/editName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:padding="6dp"
                    app:layout_constraintLeft_toRightOf="@+id/textName"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear2"
                    tools:layout_editor_absoluteX="152dp"
                    tools:layout_editor_absoluteY="88dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="12dp"
                app:layout_constraintTop_toBottomOf="@+id/linear2">

                <TextView
                    android:id="@+id/textPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:padding="3dp"
                    android:text="@string/password"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@+id/editPass"
                    app:layout_constraintTop_toBottomOf="@+id/linear3"
                    tools:layout_editor_absoluteY="180dp" />


                <EditText
                    android:id="@+id/editPass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="6dp"
                    app:layout_constraintLeft_toRightOf="@+id/textPass"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear3"
                    tools:layout_editor_absoluteX="141dp"
                    tools:layout_editor_absoluteY="169dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="4dp">

                <Button
                    android:id="@+id/loginbtn"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="@string/button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear7"
                    tools:layout_editor_absoluteX="102dp"
                    tools:layout_editor_absoluteY="258dp" />


                <Button
                    android:id="@+id/register1"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="4dp"
                    android:padding="3dp"
                    android:text="@string/button2"
                    app:layout_constraintLeft_toRightOf="@+id/loginbtn"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linear7"
                    tools:layout_editor_absoluteX="102dp"
                    tools:layout_editor_absoluteY="258dp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>
